--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,7 +24,7 @@ body {
   padding: 20px;
 }
 
-h2 {
+h1 {
   margin-top: 0;
   text-align: center;
 }
@@ -48,7 +48,7 @@ button {
 
 #login-button {
   background-color: #96c3d6;
-  color: #fff;
+  color: white;
   margin-bottom: 15px;
 }
 
