Create navbar and update button colors

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,13 +47,13 @@ button {
 }
 
 #login-button {
-  background-color: #96c3d6;
+  background-color: #87afc0;
   color: white;
   margin-bottom: 15px;
 }
 
 #login-button:hover {
-  background-color: #87afc0;
+  background-color: #799dac;
 }
 
 footer {
@@ -65,7 +65,7 @@ footer {
 .footer-container {
   display: flex;
   justify-content: space-between;
-  background-color: #96c3d6;
+  background-color: #87afc0;
   padding: 5px;
 }
 
