--- a/src/css/feed.css
+++ b/src/css/feed.css
@@ -16,6 +16,7 @@ body {
   flex-direction: column;
   height: 100%;
   width: 10%;
+  min-width: 200px;
   background-color: #87afc0;
   color: white;
   padding-top: 20px;
