--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,6 +15,19 @@ section {
   align-items: center;
 }
 
+h3 {
+  margin-bottom: 0;
+}
+
+.avatar {
+  height: 250px;
+  margin-bottom: 20px;
+}
+
+#snowie {
+  margin: 15px;
+}
+
 #logo {
   padding: 20px 20px 10px;
 }
@@ -22,9 +35,16 @@ section {
 .container {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 10px 20px 20px;
   align-items: center;
-  max-width: 1000px;
+  max-width: 800px;
+}
+
+.team-member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 footer {
