--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -24,6 +24,29 @@ h3 {
   margin-bottom: 20px;
 }
 
+.heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 0px;
+  width: 100%;
+}
+
+#back-button {
+  width: 100px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #87afc0;
+  color: white;
+}
+
+#back-button:hover {
+  background-color: #799dac;
+}
+
 #snowie {
   margin: 15px;
 }
