--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -70,6 +70,51 @@ h3 {
   margin-bottom: 30px;
 }
 
+.form-container {
+  display: flex;
+  width: 800px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+#contact-form {
+  width: 50%;
+}
+
+input {
+  width: 100%;
+}
+
+#message {
+  width: 100%;
+}
+
+.form-group {
+  width: 100%;
+  background-color: bab;
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#submit-button {
+  width: 100%;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #87afc0;
+  color: white;
+}
+
+#submit-button:hover {
+  background-color: #799dac;
+}
+
 footer {
   position: fixed;
   bottom: 0;
