--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,3 @@
-.nav-link:hover {
-  background-color: #cbebef;
-}
-
-.nav-link-active {
-  background-color: powderblue;
+.footer-link:hover {
+  text-decoration: underline;
 }
