Remove header and create compact sidebar

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,3 +1,13 @@
 .footer-link:hover {
   text-decoration: underline;
 }
+
+.compact-nav-link {
+  padding: 5px 2px 0px;
+}
+
+.compact-nav-link-active {
+  background-color: powderblue;
+  border-radius: 5px;
+  padding: 5px 2px 0px;
+}
