Create menu for footer links in compact sidebar

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -11,3 +11,8 @@
   border-radius: 5px;
   padding: 5px 2px 0px;
 }
+
+.compact-footer-link:hover,
+.compact-footer-link:focus {
+  background-color: #cbebef;
+}
